--- a/public/stylesheets/article.scss
+++ b/public/stylesheets/article.scss
@@ -43,6 +43,82 @@
     }
   }
   
+  // マークダウンで書いた記事用のスタイル！　今後はこっちメインで使う！！
+  .article-contents{
+    width: 100%;
+    max-width: 640px;
+    a{
+      text-decoration: underline;
+      color: blue;
+    }
+    h2{
+      margin-top: 80px;
+      margin-bottom: 30px;
+      padding-left: 5px;
+      border-left: 12px solid $layout-bg-color;
+      border-bottom: 3px double $layout-bg-color;
+      font-size: $font-size-big;
+      font-weight: bold;
+    }
+    h3{
+      margin-top: 80px;
+      margin-bottom: 10px;
+      font-size: $font-size-small;
+      line-height: $font-size-big;
+      font-weight: bold;
+      vertical-align: center;
+      &::before{
+        content: '◆';
+        margin-right: 5px;
+        position: relative;
+        top: calc((#{$font-size-big} - #{$font-size-small})/2);
+        color: $layout-bg-color;
+        font-size: $font-size-big;
+      }
+    }
+    p{
+      line-height: $font-size-small*2;
+      margin-bottom: 20px;
+    }
+    span{
+      font-size: 18px;
+      font-weight: bold;
+      border-bottom: 2px solid $layout-bg-color;
+    }
+    ul{
+      margin-top: 10px;
+      margin-bottom: 30px;
+      padding: 20px 10px;
+      line-height: $font-size-small*2.5;
+      background-color: rgba(0,0,112,0.08);
+      border: 3px solid $layout-bg-color;
+    }
+    table{
+      margin-top: 10px;
+      margin-bottom: 80px;
+      border-collapse: collapse;
+      th{
+        background-color: $layout-bg-color;
+        color: white;
+        text-align: center;
+      }
+      th, td{
+        border: solid 1px $layout-bg-color;
+        padding: 10px;
+      }
+    }
+    pre{
+      padding: 0 20px;
+      background-color: #364549;
+      code{
+        color: #8bdf4c;
+        font-family: Consolas;
+        font-size: cals(#{$font-size-small} - 2px);
+      }
+    }
+  }
+
+  // ↓↓そのうち消す↓↓　htmlタグで書いた記事用のCSS　---------------
   .article-content{
     width: 100%;
     max-width: 640px;
