--- a/views/test.html
+++ b/views/test.html
@@ -1,70 +1,106 @@
 <!-- article-content⓵ ------------------------------------------------------>
-<div class="article-content">
-  <h2>この記事の内容</h2>
-  <p>
-    HTMLの勉強を始めたばかりの方に向けてこの記事を書いています。<br>
-    もっともシンプルな方法でHTMLファイルを作成して、ブラウザで表示させてみることで、
-    ExcelやWordのようにHTMLファイルを身近に感じてもらうことを目的としています。
-  </p>
-</div>
 
-<!-- article-content⓵ ------------------------------------------------------>
-<div class="article-content">
-  <h2>本題</h2>
+  ## この記事の内容
   <p>
-    それではさっそく、下の①、②を進めていきます。
+    私が「AWS LightSail + WordPress」でブログを作成した際に参考にした記事を紹介します。
+    ブログ作成の手順に加え、必要な初期設定までの手順です。
   </p>
+  <p>記事は下の手順に沿って並べています。</p>
   <ul>
-    <li>①メモ帳でHTMLファイルを作成</li>
-    <li>②ブラウザで表示</li>
+    <li>①AWS LightSailにWordPressをインストール</li>
+    <li>②お名前.comで独自ドメイン取得</li>        
+    <li>③独自ドメインの紐づけ（お名前.com ⇔ AWS Route53)</li>        
+    <li>④独自ドメインの紐づけ（AWS route53 ⇔ AWS LightSail)、SSL化</li>        
+    <li>⑤WordPressの初期設定・始め方</li>
   </ul>
 
-  <h3>①メモ帳でHTMLファイルを作成</h3>
+
+<!-- article-content⓶ -->
+
+  ## 前提条件
   <p>
-    まず、メモ帳を開きます。
-    <img src="https://assets.st-note.com/img/1655984588797-XoPy0Ya1Yo.jpg?width=800">
-  </p>
-  <p>次に、開いたメモ帳に以下をコピペしてください。</p>
-  <pre>
-    <code>
-<html>
-  <head>
-    <title>ページのタイトル</title>
-  </head>
-  <body>
-    <h1>テストテキスト</h1>
-  </body>
-</html>
-    </code>
-  </pre>
-  <p>
-    次に、デスクトップに「test.html」とファイル名をつけて保存してください。<br>
-  （保存するとアイコンが普段使っているブラウザのアイコンになります。）
-  <img src="https://assets.st-note.com/img/1656125699209-3yTN0ZULD5.png">
-  </p>
-  <p>
-    以上で「①メモ帳でHTMLファイルを作成」は完了です！
-    では続いて作成したHTMLファイルをブラウザで表示させてみます。
+    ・AWSのアカウントを持っていること
   </p>
 
-  <h3>②ブラウザで表示</h3>
+
+<!-- article-content⓷ -->
+
+  ## 本題
+  <p>では、さっそく本題ですが、</p>
+  <p><span>
+    ①AWS LightSailにWordPressをインストール
+  </span></p>
   <p>
-    やり方は非常に簡単です。作成したファイルをダブルクリックしてください。<br>
-    すると下のようなページが表示されます。
-  </p>
-  <img src="https://assets.st-note.com/img/1656126333176-fZLL3DbHFj.jpg?width=800">
-  <p>以上で、「①メモ帳でHTMLファイルを作成」、「②ブラウザで表示」完了です！</p>
-</div>
-<!-- article-content⓶ ------------------------------------------------------>
-<div class="article-content">
-  <h2>以下、補足です。</h2>
-  <p>
-    作成したファイルの開き方が少し特殊なので、捕捉します。
+    手順解説記事のリンク：<br>
+    <a href="https://dev.classmethod.jp/articles/try-lightsail-wordpress/" target="_blank">
+      Amazon Lightsailを使って15分でWordPressを構築してみた
+    </a><br><br>
+    ※「構築」の部分だけでOKです。<br>
+    （「構築後に行うべきこと」は余裕があれば見てみてください）
   </p>
   <p>
-    【開き方】<br>
-      ①ファイルを右クリック<br>
-      ②プログラムから開く　→　メモ帳
+    【リンク先の記事で解説していること】<br>
+    ・AWS LightSailにWordPressをインストール<br>
+    ・AWS LightSailのIPアドレス静的化<br>
+    ・WordPressログインパスの確認方法
   </p>
-  <img src="https://assets.st-note.com/img/1656127364789-7yKP2hrUT3.jpg?width=800">
-</div>
+  
+  <br><br><br>
+  <p><span>
+    ②お名前.comで独自ドメイン取得
+  </span></p>
+  <p>
+    手順解説記事のリンク：<br>
+    <a href="https://www.onamae.com/service/d-regist/" target="_blank">
+      お名前.comで独自ドメイン取得
+    </a><br><br>
+    ※リンク先の記事の「ドメイン登録方法」を参照ください。<br>
+    ※手順の「3レンタルサーバー・オプションを選択」では「利用しない」を選択してください。<br>
+    ※オプションは任意（私は何もつけていません。）
+  </p>
+
+  <br><br><br>
+  <p><span>
+    ③独自ドメインの紐づけ（お名前.com ⇔ AWS Route53)
+  </span></p>
+  <p>
+    手順解説記事のリンク：<br>
+    <a href="https://dev.classmethod.jp/articles/route53-domain-onamae/" target="_blank">
+      お名前.comで取得したドメインをRoute53のネームサーバで管理設定してみた
+    </a>
+  </p>
+
+  <br><br><br>
+  <p><span>
+    ④独自ドメインの紐づけ（AWS route53 ⇔ AWS LightSail)、SSL化
+  </span></p>
+  <p>
+    手順解説記事のリンク：<br>
+    <a href="https://qiita.com/tomokei5634/items/a5dfb8504989ed93c31b" target="_blank">
+      【初心者】AWSのLightsailでIP固定化と独自ドメインの紐付けとSSL化
+    </a><br><br>
+    ※手順１の「IPを固定する（LightsailのIP固定化（静的化））」はスキップし、
+    手順２の「独自ドメインと静的IP（固定化したIP）との紐付け」から進めてください。
+  </p>
+
+  <br><br><br>
+  <p><span>
+    ⑤WordPressの初期設定・始め方
+  </span></p>
+  <p>
+    手順解説記事のリンク：<br>
+    <a href="https://www.xserver.ne.jp/blog/wordpress-initial-setting/#%E3%83%96%E3%83%AD%E3%82%B0%E3%82%92%E6%9B%B8%E3%81%8F%E5%89%8D%E3%81%AB%E5%BF%85%E3%81%9A%E8%A1%8C%E3%81%86%E8%A8%AD%E5%AE%9A" target="_blank">
+      初心者向け】WordPressブログを書き始める前に済ませたい初期設定13個
+    </a><br><br>
+    ※「ブログを書く前に必ず行う設定」の「４．SSLの設定（ポイント）」は既にやったの
+    で、ここではスキップしてください。
+
+
+<!-- article-content⓸ -->
+
+  ## おわりに
+  <p>
+    これででAWS LightSail + WordPressでのブログ環境が整い、初期設定をしながらWordPressの操作にも触れました。<br><br>
+    最初は戸惑うことも多いかと思いますが、WordPressはネット上に情報が多くありますので時間をかけて少しずつ操作を覚えて
+    ブログを楽しんでください。
+  </p>
